tests-trybuild/tests/riscv-rt/entry/fail_arg_type.rs
#[riscv_rt::entry]
fn entry_point(_hart_id: String) {}

fn main() {}
